# Rkv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  counter.sh
Client/include/rkv/: Client.hpp  GetPolicy.hpp  KvClient.hpp  MasterClient.hpp
Client/src/: App.cpp  CMakeLists.txt  Client.cpp  KvClient.cpp
Server/include/rkv/: AppendEntiresRequest.hpp  AppendEntiresResponse.hpp  AppendEntriesRequest.hpp  AppendEntriesResponse.hpp  AppendEntriesResult.hpp  CompleteMigrationRequest.hpp  CompleteMigrationResponse.hpp  CompletedMigration.hpp  DeriveResult.hpp  DeriveShardRequest.hpp  DeriveShardResponse.hpp  GetCompletedMigrationsRequest.hpp  GetCompletedMigrationsResponse.hpp  GetMigrationsRequest.hpp  GetMigrationsResponse.hpp  GetShardByIdRequest.hpp  GetShardByIdResponse.hpp  InstallShardRequest.hpp  KeyValueService.hpp  KvServer.hpp  LogProposal.hpp  Migration.hpp  MigrationCompleted.hpp  RaftGroup.hpp  RaftLog.hpp  RaftMember.hpp  RaftServer.hpp  RaftServerOption.hpp  RaftStorage.hpp  VoteProposal.hpp  VoteRequest.hpp  VoteResponse.hpp
Server/src/: App.cpp  AppendEntiresRequest.cpp  AppendEntiresResponse.cpp  AppendEntriesRequest.cpp  AppendEntriesResponse.cpp  CMakeLists.txt  CompleteMigrationRequest.cpp  CompletedMigration.cpp  DeriveShardRequest.cpp  DeriveShardResponse.cpp  GetCompletedMigrationsRequest.cpp  GetCompletedMigrationsResponse.cpp  GetMigrationsRequest.cpp  GetMigrationsResponse.cpp  GetShardByIdRequest.cpp  GetShardByIdResponse.cpp  KeyValueService.cpp  KvServer.cpp  Migration.cpp  RaftGroup.cpp  RaftLog.cpp  RaftMember.cpp  RaftServer.cpp  RaftStorage.cpp  VoteRequest.cpp  VoteResponse.cpp
ShardClient/include/rkv/: KvClient.hpp  ShardClient.hpp  WorkerClient.hpp
ShardClient/src/: App.cpp  CMakeLists.txt  KvClient.cpp  ShardClient.cpp  WorkerClient.cpp
ShardMaster/include/rkv/: CompletedMigration.hpp  CompletedMigrationManager.hpp  MasterServer.hpp  MasterServerOption.hpp  Migration.hpp  MigrationManger.hpp  Shard.hpp  ShardManger.hpp  ShardSet.hpp
ShardMaster/src/: App.cpp  CMakeLists.txt  CompletedMigrationManager.cpp  MastServer.cpp  MasterServer.cpp  Migration.cpp  MigrationManager.cpp  Shard.cpp  ShardManger.cpp  ShardSet.cpp
ShardMasterClient/include/rkv/: MasterClient.cpp  MasterClient.hpp
ShardMasterClient/src/: CMakeLists.txt  MasterClient.cpp  MasterClient.hpp
ShardWorker/include/rkv/: KvServerOption.hpp  WorkerServer.hpp  WorkerServerOption.hpp
ShardWorker/src/: App.cpp  CMakeLists.txt  KvServer.cpp  WorkerServer.cpp
Shared/include/rkv/: ClearShardRequest.hpp  ClearShardResponse.hpp  ClientOperator.hpp  CompleteMigrationResult.hpp  DeleteRequest.hpp  DeleteResponse.hpp  DeriveResult.hpp  DeriveShardRequest.hpp  DeriveShardResponse.hpp  GetCompletedMigrationsRequest.hpp  GetMigrationsRequest.hpp  GetMigrationsResponse.hpp  GetPolicy.hpp  GetRequest.hpp  GetResponse.hpp  GetShardByIdRequest.hpp  GetShardByIdResponse.hpp  GetShardByKeyRequest.hpp  GetShardByKeyResponse.hpp  GetShardByWorkerIdRequest.hpp  GetShardByWorkerIdResponse.hpp  GetVersionResponse.hpp  LeaderRedirectRequest.hpp  LeaderRedirectResponse.hpp  MessageHeader.hpp  MigrateRequest.hpp  MigrateResponse.hpp  Migration.hpp  MotifyResult.hpp  PutRequest.hpp  PutResponse.hpp  Shard.hpp  StartMigrationRequest.hpp  StartMigrationResponse.hpp  Utility.hpp
Shared/src/: CMakeLists.txt  ClearShardRequest.cpp  ClearShardResponse.cpp  ClientOperator.cpp  CompleteMigrationResponse.cpp  CompletedMigration.cpp  DeleteRequest.cpp  DeleteResponse.cpp  DeriveShardRequest.cpp  GetCompletedMigrationsRequest.cpp  GetMigrationsRequest.cpp  GetMigrationsResponse.cpp  GetRequest.cpp  GetResponse.cpp  GetShardByIdRequest.cpp  GetShardByIdResponse.cpp  GetShardByKeyRequest.cpp  GetShardByKeyResponse.cpp  GetShardByWorkerIdRequest.cpp  GetShardByWorkerIdResponse.cpp  GetVersionResponse.cpp  LeaderRedirectRequest.cpp  LeaderRedirectResponse.cpp  MigrateRequest.cpp  MigrateResponse.cpp  Migration.cpp  PutRequest.cpp  PutResponse.cpp  Shard.cpp  StartMigrationRequest.cpp  StartMigrationResponse.cpp
